--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
-h2{
+.H1{
    text-align: center;
    font-size: 35px;
 }
@@ -26,3 +26,9 @@ button:hover{
     height: 250px;
     width: 350px;
 }
+
+// .links{
+//     margin-left: 700px;
+//     margin-top: 100px;
+// }
+
