--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,21 +2,21 @@
 <h2 class="H1">User Login</h2>
 <form #LoginForm="ngForm" (ngSubmit)="LoginUser(LoginForm.value)" >
   <div>
-  <label for="name">Name </label>
-  <input type="text" name="name" placeholder="Enter Name" ngModel>
+  <label for="name">Email </label>
+  <input type="email" name="Email" placeholder="Enter Name" ngModel>
   <br> <br>
   <label for="name">Password </label>
   <input type="password" name="password" placeholder="Enter password" ngModel>
   <br> <br>
-  <button>Login</button>
+  <button type="button" (click)="onsubmit()">Login</button>
 </div>
 </form>
 </div>
 
 
-<h2 class="H2">Admin link</h2>
+<!-- <h2 class="H2">Admin link</h2>
 <ul class="links">
   <li><a routerLink="admin/login">Login</a></li>
   <li><a routerLink="admin/list">List</a></li>
-</ul>
+</ul> -->
 <router-outlet></router-outlet>
