--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,34 +1,34 @@
-.H1{
-   text-align: center;
-   font-size: 35px;
-}
+// .H1{
+//    text-align: center;
+//    font-size: 35px;
+// }
 
-form{
-    text-align: center;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 20px;
-}
+// form{
+//     text-align: center;
+//     font-family: 'Times New Roman', Times, serif;
+//     font-size: 20px;
+// }
 
-button{
-    height: 30px;
-    width: 70px;
-}
+// button{
+//     height: 30px;
+//     width: 70px;
+// }
 
-button:hover{
-    background-color: black;
-    color: white;
-}
+// button:hover{
+//     background-color: black;
+//     color: white;
+// }
 
-.box{
-    margin-left: 700px;
-    margin-top: 100px;
-    border: 2px solid black;
-    height: 250px;
-    width: 350px;
-}
-
-// .links{
+// .box{
 //     margin-left: 700px;
 //     margin-top: 100px;
+//     border: 2px solid black;
+//     height: 250px;
+//     width: 350px;
 // }
+
+// // .links{
+// //     margin-left: 700px;
+// //     margin-top: 100px;
+// // }
 
